feat(changes): change color scheme, add ability to view ideas, to delete ideas

--- a/app/src/main/res/layout/fragment_ideas_list.xml
+++ b/app/src/main/res/layout/fragment_ideas_list.xml
@@ -49,6 +49,7 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
         android:src="@android:drawable/ic_input_add"
+        app:backgroundTint="@color/teal_primary"
         app:tint="@android:color/white" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
