--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="176dp"
-    android:background="@android:color/darker_gray"
+    android:background="@color/teal_primary"
     android:gravity="bottom"
     android:orientation="vertical"
     android:padding="16dp"
