--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -17,5 +17,15 @@
         android:label="@string/create_idea"
         tools:layout="@layout/fragment_create_idea" />
 
+    <fragment
+        android:id="@+id/nav_idea_details"
+        android:name="org.prospex.presentation.ideas.IdeaDetailsFragment"
+        android:label="@string/idea_details"
+        tools:layout="@layout/fragment_idea_details">
+        <argument
+            android:name="ideaId"
+            app:argType="string" />
+    </fragment>
+
 </navigation>
 
